--- a/frontend/package.json
+++ b/frontend/package.json
@@ -12,16 +12,20 @@
     "@emotion/react": "^11.13.0",
     "@emotion/styled": "^11.13.0",
     "@mui/icons-material": "^5.16.5",
+    "@mui/lab": "^5.0.0-alpha.173",
     "@mui/material": "^5.16.5",
     "animate.css": "^4.1.1",
     "axios": "^1.7.3",
     "gsap": "^3.12.5",
+    "i18next": "^23.13.0",
     "next": "14.2.5",
+    "notistack": "^3.0.1",
     "react": "^18",
     "react-animate-on-scroll": "^2.1.9",
     "react-animated-css": "^1.2.1",
     "react-dom": "^18",
     "react-hook-form": "^7.52.1",
+    "react-i18next": "^15.0.1",
     "react-simple-image-slider": "^2.4.1",
     "react-simple-maps": "^3.0.0",
     "react-timer-hook": "^3.0.7",
